# nddetdataformats

./: CMakeLists.txt
docs/: README.md
include/nddetdataformats/: MPDFrame.hpp  PACMANFrame.hpp
pybindsrc/: module.cpp  mpd.cpp  registrators.hpp  submodules.hpp
python/nddetdataformats/: __init__.py
python/nddetdataformats/mpd/: __init__.py
unittest/: Nddetdataformats_test.cxx
